--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "start": "remix-serve build",
     "start:mocks": "binode --require ./mocks -- @remix-run/serve:remix-serve build",
     "test": "vitest",
-    "typecheck": "tsc && tsc -p",
+    "typecheck": "tsc",
     "validate": "run-p \"test -- --run\" lint typecheck test:e2e:run"
   },
   "prettier": {},
