--- a/package.json
+++ b/package.json
@@ -36,6 +36,9 @@
     "marked": "^4.2.12",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "remix-auth": "^3.4.0",
+    "remix-auth-microsoft": "^2.0.0",
+    "remix-auth-oauth2": "^1.6.0",
     "tiny-invariant": "^1.3.1"
   },
   "devDependencies": {
