--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "@remix-run/react": "^1.11.1",
     "@remix-run/serve": "^1.11.1",
     "@remix-run/server-runtime": "^1.11.1",
+    "@tailwindcss/line-clamp": "^0.4.2",
     "bcryptjs": "^2.4.3",
     "isbot": "^3.6.5",
     "marked": "^4.2.12",
