updated .env.example with three more variables

--- a/.env.example
+++ b/.env.example
@@ -1,2 +1,5 @@
-DATABASE_URL="file:./data.db?connection_limit=1"
+DATABASE_URL="database_url"
 SESSION_SECRET="super-duper-s3cret"
+MICROSOFT_CLIENT_SECRET="client_secret"
+MICROSOFT_CLIENT_ID="client_id"
+MICROSOFT_TENANT_ID="tenant_id"
