run prisma generate on postinstall

--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "start:mocks": "binode --require ./mocks -- @remix-run/serve:remix-serve build",
     "test": "vitest",
     "typecheck": "tsc",
-    "validate": "run-p \"test -- --run\" lint typecheck test:e2e:run"
+    "validate": "run-p \"test -- --run\" lint typecheck test:e2e:run",
+    "postinstall": "prisma generate"
   },
   "prettier": {},
   "eslintIgnore": [
