--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "lodash.debounce": "^4.0.8",
     "marked": "^4.2.12",
     "react": "^18.2.0",
+    "react-debounce-input": "^3.3.0",
     "react-dom": "^18.2.0",
     "remix-auth": "^3.4.0",
     "remix-auth-microsoft": "^2.0.0",
